Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjNumberField.quorum
class Main
    Number num
    action Main
        num = cast(Number, 7.5)
        if num:GetValue() = 7.5
            output "passed"
        end
    end
end