Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjNumObjWrapped.quorum
class main
    action Main
        Number num
        num:setValue(7.5)
        Boolean b = num
    end
end